--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,5 +13,22 @@
     <name>Git Extension Client</name>
 
     <dependencies>
+        <dependency>
+            <groupId>com.kayyagari</groupId>
+            <artifactId>git-ext-shared</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mirth.connect.client</groupId>
+            <artifactId>mirth-client</artifactId>
+            <version>${mc.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
