--- a/client/pom.xml
+++ b/client/pom.xml
@@ -25,6 +25,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx-core</artifactId>
+            <!-- Use the version 1.6.2-2 cause the pom file of 1.6.2 is messed(has 
+                wrong version) up in central repo. Without this version the Maven fails to 
+                build -->
+            <version>1.6.2-2</version>
+        </dependency>
+        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.9.9</version>
