--- a/package/resources/plugin.xml
+++ b/package/resources/plugin.xml
@@ -19,9 +19,12 @@
     <library type="SERVER" path="slf4j-api-1.7.2.jar" />
 
     <library type="SHARED" path="objmeld-${objmeld.version}.jar" />
-    <library type="SHARED" path="forms-1.0.5.jar" />
 
     <library type="SERVER" path="git-ext-server-${project.version}.jar" />
     <library type="SHARED" path="git-ext-shared-${project.version}.jar" />
     <library type="CLIENT" path="git-ext-client-${project.version}.jar" />
+    
+    <apiProvider type="SERVLET_INTERFACE" name="com.kayyagari.GitExtServletInterface" />
+
+    <apiProvider type="SERVER_CLASS" name="com.kayyagari.GitExtServlet" />
 </pluginMetaData>
