--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -14,15 +14,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jmeld</groupId>
+            <groupId>com.kayyagari</groupId>
             <artifactId>objmeld</artifactId>
             <version>${objmeld.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>eu.medsea.mimeutil</groupId>
-                    <artifactId>mime-util</artifactId>
-                </exclusion>
-            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.0.10</version>
         </dependency>
     </dependencies>
 </project>
