--- a/pom.xml
+++ b/pom.xml
@@ -55,49 +55,49 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.connectors</groupId>
             <artifactId>vm-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.plugins.datatypes</groupId>
             <artifactId>datatype-raw-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.plugins.datatypes</groupId>
             <artifactId>datatype-hl7v2-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.connectors</groupId>
             <artifactId>js-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.plugins</groupId>
             <artifactId>javascriptstep-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.connectors</groupId>
             <artifactId>tcp-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.plugins</groupId>
             <artifactId>mllpmode-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.mirth.connect.extensions</groupId>
+            <groupId>com.mirth.connect.plugins</groupId>
             <artifactId>http-shared</artifactId>
             <version>${mc.version}</version>
             <scope>provided</scope>
@@ -217,4 +217,11 @@
       </plugin>      
     </plugins>
   </build>
+
+<repositories>
+  <repository>
+    <id>nexus</id>
+    <url>https://nexus.kaurpalang.com/repository/maven-public/</url>
+  </repository>
+</repositories>
 </project>
