--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>git-ext-client</artifactId>
     <name>Git Extension Client</name>
 
+    <properties>
+        <swingx-core.version>1.6.2-21.6.2-2</swingx-core.version>
+        <joda-time.version>2.10.10</joda-time.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.kayyagari</groupId>
@@ -30,12 +35,12 @@
             <!-- Use the version 1.6.2-2 cause the pom file of 1.6.2 is messed(has 
                 wrong version) up in central repo. Without this version the Maven fails to 
                 build -->
-            <version>1.6.2-2</version>
+            <version>${swingx-core.version}</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.9.9</version>
+            <version>${joda-time.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
