--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>git-ext-shared</artifactId>
     <name>Git Extension Shared</name>
 
+    <properties>
+        <swagger-annotations.version>2.1.9</swagger-annotations.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.kayyagari</groupId>
@@ -21,7 +25,7 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>2.0.10</version>
+            <version>${swagger-annotations.version}</version>
         </dependency>
     </dependencies>
 </project>
