--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,7 +13,7 @@
     <name>Git Extension Client</name>
 
     <properties>
-        <swingx-core.version>1.6.2-21.6.2-2</swingx-core.version>
+        <swingx-core.version>1.6.2-2</swingx-core.version>
         <joda-time.version>2.10.10</joda-time.version>
     </properties>
 
