--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>git-ext</artifactId>
         <groupId>com.kayyagari</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>git-ext-client</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.kayyagari</groupId>
             <artifactId>git-ext-shared</artifactId>
-            <version>${project.version}</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.mirth.connect</groupId>
