--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
 
   <groupId>com.kayyagari</groupId>
   <artifactId>git-ext</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>${revision}</version>
 
   <name>Git Extension</name>
   <packaging>pom</packaging>
 
     <properties>
+        <revision>1.0.1-SNAPSHOT</revision>
+
         <plugin.supported.mc.versions>${mc.version}, 3.10.1, 3.10.0, 3.9.1, 3.9.0</plugin.supported.mc.versions>
 
         <mc.version>3.11.0</mc.version>
