--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>git-ext</artifactId>
         <groupId>com.kayyagari</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>git-ext-shared</artifactId>
