--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
     <packaging>pom</packaging>
 
     <properties>
-        <revision>1.0.1-SNAPSHOT</revision>
+        <revision>2.0.0-SNAPSHOT</revision>
 
-        <plugin.supported.mc.versions>${mc.version}, 3.11.0, 3.10.1, 3.10.0, 3.9.1, 3.9.0</plugin.supported.mc.versions>
+        <plugin.supported.mc.versions>${mc.version}</plugin.supported.mc.versions>
 
-        <mc.version>3.12.0</mc.version>
+        <mc.version>4.5.2</mc.version>
         <jgit.version>5.12.0.202106070339-r</jgit.version>
         <jgit.JavaEWAH.version>1.1.7</jgit.JavaEWAH.version>
         <ognl.version>3.2.15</ognl.version>
@@ -45,7 +45,7 @@
         <xpp3.version>1.1.4c</xpp3.version>
         <commons-io.version>2.10.0</commons-io.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>2.17.2</log4j.version>
         <javassist.version>3.28.0-GA</javassist.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -185,8 +185,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
             <scope>provided</scope>
         </dependency>
