--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>git-ext-shared</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
