Added objmeld as a module

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,7 @@
     </dependencies>
 
     <modules>
+        <module>objmeld</module>
         <module>server</module>
         <module>shared</module>
         <module>client</module>
