--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,10 +18,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
     - name: Set up JDK 8
       uses: actions/setup-java@v4
       with:
-        submodules: recursive
         java-version: '8'
         distribution: 'zulu'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
